Impl. final static website structure

--- a/src/pages/Home/Components/ProjectImages.module.css
+++ b/src/pages/Home/Components/ProjectImages.module.css
@@ -1,4 +1,14 @@
 .globalWrapper {
     width: 50%;
     height: 100vh;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    justify-items: center;
+    border: 1px solid black;
+}
+
+.mockupDummy {
+    width: 150px;
+    height: 250px;
+    background-color: green;
 }
