--- a/src/pages/Home/Components/ProjectImages.module.css
+++ b/src/pages/Home/Components/ProjectImages.module.css
@@ -1,14 +1,19 @@
 .globalWrapper {
     width: 50%;
-    height: 100vh;
+    height: 150vh;
     display: grid;
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: repeat(2, 500px);
+    grid-auto-rows: 600px;
     justify-items: center;
-    border: 1px solid black;
+    align-items: flex-start;
 }
 
-.mockupDummy {
-    width: 150px;
-    height: 250px;
-    background-color: green;
+.mockupWrapper {
+    width: 400px;
+    height: 800px;
+}
+
+.mockupImage {
+    width: 100%;
+    height: 100%;
 }
