--- a/src/pages/Home/Skills.module.css
+++ b/src/pages/Home/Skills.module.css
@@ -25,3 +25,12 @@
     text-align: center;
     list-style: none;
 }
+
+.backgroundText {
+    font-size: clamp(10rem, 20vw, 15rem);
+    font-weight: 700;
+    color: orangered;
+    opacity: 0.2;
+    position: absolute;
+    z-index: -1;
+}
