--- a/src/pages/Home/About.module.css
+++ b/src/pages/Home/About.module.css
@@ -1,7 +1,7 @@
 .globalWrapper {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     width: 100%;
 }
@@ -11,6 +11,15 @@
     font-size: 2rem;
     font-weight: 300;
     text-align: center;
+}
+
+.backgroundText {
+    font-size: clamp(10rem, 20vw, 15rem);
+    font-weight: 700;
+    color: orangered;
+    opacity: 0.2;
+    position: absolute;
+    z-index: -1;
 }
 
 @media screen and (max-width: 768px) {
