--- a/src/pages/Home/Components/ProjectIllustrations.module.css
+++ b/src/pages/Home/Components/ProjectIllustrations.module.css
@@ -8,6 +8,7 @@
     align-items: flex-start;
 }
 
+/* 0.5:1 aspect ratio */
 .mockupWrapper {
     width: 400px;
     height: 800px;
@@ -16,4 +17,25 @@
 .mockupImage {
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 1250px) {
+    .globalWrapper {
+        width: 100%;
+        height: 150vh;
+        justify-content: flex-end;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .globalWrapper {
+        grid-template-columns: 500px;
+        grid-auto-rows: 300px;
+        justify-content: center;
+    }
+
+    .mockupWrapper {
+        width: 300px;
+        height: 600px;
+    }
 }
